--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Repositorio para el curso básico de Node.js de Platzi.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "probandovaca": "cowsay Hola para probar"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/platzi/nodejsbasico/issues"
   },
-  "homepage": "https://github.com/platzi/nodejsbasico#readme"
+  "homepage": "https://github.com/platzi/nodejsbasico#readme",
+  "dependencies": {
+    "cowsay": "^1.4.0"
+  }
 }
